--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Build and push options_lambda_function Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
-          dockerfile: /backend/options_lambda_function/dockerfile
+          context: ./backend
+          dockerfile: ./backend/options_lambda_function/dockerfile
           push: true
           tags: laserchads/options_lambda_function:latest
 
