--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -41,15 +41,15 @@ jobs:
       #     tags: laserchads/apig-id-share:latest
 
       - name: Build and push options_lambda_function Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
-          context: ./backend
-          dockerfile: options_lambda_function/dockerfile
+          context: .
+          file: ./backend/options_lambda_function/dockerfile
           push: true
           tags: laserchads/options_lambda_function:latest
 
       - name: Build and push cart Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           dockerfile: /backend/cart/dockerfile
@@ -57,7 +57,7 @@ jobs:
           tags: laserchads/cart:latest
 
       - name: Build and push product-microservice Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           dockerfile: /backend/product-microservice/dockerfile
