--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 version: "3"
 services:
 
-  frontend:
-    container_name: "frontend"
-    build: ./frontend
-    ports:
-      - "3000:3000"
-    environment:
-      - WDS_SOCKET_HOST=127.0.0.1 
-      - CHOKIDAR_USEPOLLING=true
-      - WATCHPACK_POLLING=true
-    #  - REACT_APP_API_URL=http://localhost:4566
-    volumes:
-      - "./frontend/public:/app/public"
-      - "./frontend/src:/app/src"
-    depends_on:
-      - apig-id-share
+  # frontend:
+  #   container_name: "frontend"
+  #   build: ./frontend
+  #   ports:
+  #     - "3000:3000"
+  #   environment:
+  #     - WDS_SOCKET_HOST=127.0.0.1 
+  #     - CHOKIDAR_USEPOLLING=true
+  #     - WATCHPACK_POLLING=true
+  #   #  - REACT_APP_API_URL=http://localhost:4566
+  #   volumes:
+  #     - "./frontend/public:/app/public"
+  #     - "./frontend/src:/app/src"
+  #   depends_on:
+  #     - apig-id-share
 
   localstack:
     container_name: "localstack"
@@ -158,31 +158,31 @@ services:
     networks:
       - backend
 
-  product-microservice:
-    container_name: "product-microservice"
-    build:
-      dockerfile: ./backend/product-microservice/dockerfile
-      no_cache: true
-    environment:
-      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
-      - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} # Sometimes boto3 needs credentials
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} # Sometimes boto3 needs credentials
-      - APIG_TAG_ID=${APIG_TAG_ID}
-      - APIG_TAG=${APIG_TAG}
-      - APIG_STAGE=${APIG_STAGE}
-      - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
-      - APIG_WAIT=${APIG_WAIT}
-      - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-    depends_on:
-      - localstack
-      - apig-main
-      - apig-id-share
-      - options_lambda_function
-    networks:
-      - backend
+  # product-microservice:
+  #   container_name: "product-microservice"
+  #   build:
+  #     dockerfile: ./backend/product-microservice/dockerfile
+  #     no_cache: true
+  #   environment:
+  #     - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+  #     - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
+  #     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} # Sometimes boto3 needs credentials
+  #     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} # Sometimes boto3 needs credentials
+  #     - APIG_TAG_ID=${APIG_TAG_ID}
+  #     - APIG_TAG=${APIG_TAG}
+  #     - APIG_STAGE=${APIG_STAGE}
+  #     - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
+  #     - APIG_WAIT=${APIG_WAIT}
+  #     - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
+  #   volumes:
+  #     - "/var/run/docker.sock:/var/run/docker.sock"
+  #   depends_on:
+  #     - localstack
+  #     - apig-main
+  #     - apig-id-share
+  #     - options_lambda_function
+  #   networks:
+  #     - backend
 
   # product-microservice-debugger:
   #   container_name: "product-microservice-debugger"
