--- a/docker-compose_main_latest.yml
+++ b/docker-compose_main_latest.yml
@@ -3,7 +3,7 @@ services:
 
   frontend:
     container_name: "frontend"
-    image: darnol/laser-chad-frontend:deliverable2.1
+    image: laserchads/frontend:latest
     ports:
       - "3000:3000"
     environment:
@@ -44,7 +44,7 @@ services:
 
   apig-main:
     container_name: "apig-main"
-    image: darnol/laser-chad-apig-main:deliverable2.1
+    image: laserchads/apig-main:latest
     environment:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
       - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
@@ -64,7 +64,7 @@ services:
 
   apig-id-share:
     container_name: "apig-id-share"
-    image: darnol/laser-chad-apig-id-share:deliverable2.1
+    image: laserchads/apig-id-share:latest
     ports:
       - "5000:5000"
     environment:
@@ -87,7 +87,7 @@ services:
 
   options_lambda_function:
     container_name: "options_lambda_function"
-    image: darnol/laser-chad-options_lambda_function:deliverable2.1
+    image: laserchads/options_lambda_function:latest
     environment:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
       - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
@@ -105,7 +105,7 @@ services:
 
   cart:
     container_name: "cart"
-    image: darnol/laser-chad-cart:deliverable2.1
+    image: laserchads/cart:latest
     environment:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
       - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
@@ -128,34 +128,34 @@ services:
       - backend
     platform: linux/amd64
 
-  cart-debugger:
-    container_name: "cart-debugger"
-    image: darnol/laser-chad-cart-debugger:deliverable2.1
-    environment:
-      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
-      - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} # Sometimes boto3 needs credentials
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} # Sometimes boto3 needs credentials
-      - APIG_TAG_ID=${APIG_TAG_ID}
-      - APIG_TAG=${APIG_TAG}
-      - APIG_STAGE=${APIG_STAGE}
-      - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
-      - APIG_WAIT=${APIG_WAIT}
-      - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-    depends_on:
-      - localstack
-      - apig-main
-      - apig-id-share
-      - options_lambda_function
-    networks:
-      - backend
-    platform: linux/amd64
+  # cart-debugger:
+  #   container_name: "cart-debugger"
+  #   image: laserchads/cart-debugger:latest
+  #   environment:
+  #     - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+  #     - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
+  #     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} # Sometimes boto3 needs credentials
+  #     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} # Sometimes boto3 needs credentials
+  #     - APIG_TAG_ID=${APIG_TAG_ID}
+  #     - APIG_TAG=${APIG_TAG}
+  #     - APIG_STAGE=${APIG_STAGE}
+  #     - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
+  #     - APIG_WAIT=${APIG_WAIT}
+  #     - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
+  #   volumes:
+  #     - "/var/run/docker.sock:/var/run/docker.sock"
+  #   depends_on:
+  #     - localstack
+  #     - apig-main
+  #     - apig-id-share
+  #     - options_lambda_function
+  #   networks:
+  #     - backend
+  #   platform: linux/amd64
 
   product-microservice:
     container_name: "product-microservice"
-    image: darnol/laser-chad-product-microservice:deliverable2.1
+    image: laserchads/product-microservice:latest
     environment:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
       - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL} # host localstack must match the name of the service which runs localstack
@@ -178,30 +178,30 @@ services:
       - backend
     platform: linux/amd64
 
-  product-microservice-debugger:
-    container_name: "product-microservice-debugger"
-    image: darnol/laser-chad-product-microservice-debugger:deliverable2.1
-    environment:
-      - AWS_DEFAULT_REGION=us-east-1
-      - AWS_ENDPOINT_URL=http://localstack:4566 # host localstack must match the name of the service which runs localstack
-      - AWS_ACCESS_KEY_ID=fakecred # Sometimes boto3 needs credentials 
-      - AWS_SECRET_ACCESS_KEY=fakecred
-      - APIG_TAG_ID=${APIG_TAG_ID}
-      - APIG_TAG=${APIG_TAG}
-      - APIG_STAGE=${APIG_STAGE}
-      - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
-      - APIG_WAIT=${APIG_WAIT}
-      - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-    depends_on:
-      - localstack
-      - apig-main
-      - apig-id-share
-      - options_lambda_function
-    networks:
-      - backend
-    platform: linux/amd64
+  # product-microservice-debugger:
+  #   container_name: "product-microservice-debugger"
+  #   image: darnol/product-microservice-debugger:latest
+  #   environment:
+  #     - AWS_DEFAULT_REGION=us-east-1
+  #     - AWS_ENDPOINT_URL=http://localstack:4566 # host localstack must match the name of the service which runs localstack
+  #     - AWS_ACCESS_KEY_ID=fakecred # Sometimes boto3 needs credentials 
+  #     - AWS_SECRET_ACCESS_KEY=fakecred
+  #     - APIG_TAG_ID=${APIG_TAG_ID}
+  #     - APIG_TAG=${APIG_TAG}
+  #     - APIG_STAGE=${APIG_STAGE}
+  #     - AM_I_IN_A_DOCKER_CONTAINER=${AM_I_IN_A_DOCKER_CONTAINER:-True}
+  #     - APIG_WAIT=${APIG_WAIT}
+  #     - OPTIONS_LAMBDA_FUNCTION=${OPTIONS_LAMBDA_FUNCTION}
+  #   volumes:
+  #     - "/var/run/docker.sock:/var/run/docker.sock"
+  #   depends_on:
+  #     - localstack
+  #     - apig-main
+  #     - apig-id-share
+  #     - options_lambda_function
+  #   networks:
+  #     - backend
+  #   platform: linux/amd64
 
 #volumes:
 #  dbvolume:
