--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.13",
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.0",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.0.27",
     "axios": "^1.6.8",
